# discord-bot

./: .dockerignore  Cargo.toml  Dockerfile  README.md  cloudbuild.yaml  default.nix
.github/workflows/: docker.yml
compile_time_serde/: Cargo.toml
compile_time_serde/src/: lib.rs
data/: games.json
src/: main.rs
src/data/: games.json
