[package]
name = "compile_time_serde"
version = "0.1.0"
authors = ["Nils ANDRÉ-CHANG <nils@nilsand.re>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc_macro = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
